; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/iphlpapi/extr_GetExtendedUdpTable.c_GetExtendedUdpTableWithAlloc.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/iphlpapi/extr_GetExtendedUdpTable.c_GetExtendedUdpTableWithAlloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_INSUFFICIENT_BUFFER = common dso_local global i64 0, align 8
@ERROR_OUTOFMEMORY = common dso_local global i64 0, align 8
@NO_ERROR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32**, i32, i64, i32)* @GetExtendedUdpTableWithAlloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @GetExtendedUdpTableWithAlloc(i32** %0, i32 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32** %0, i32*** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i64 0, i64* %11, align 8
  %12 = load i32**, i32*** %6, align 8
  store i32* null, i32** %12, align 8
  %13 = load i32**, i32*** %6, align 8
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load i64, i64* %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = call i64 @GetExtendedUdpTable(i32* %14, i64* %11, i32 %15, i64 %16, i32 %17, i32 0)
  store i64 %18, i64* %10, align 8
  %19 = load i64, i64* %10, align 8
  %20 = load i64, i64* @ERROR_INSUFFICIENT_BUFFER, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %49

22:                                               ; preds = %4
  %23 = call i32 (...) @GetProcessHeap()
  %24 = load i64, i64* %11, align 8
  %25 = call i32* @HeapAlloc(i32 %23, i32 0, i64 %24)
  %26 = load i32**, i32*** %6, align 8
  store i32* %25, i32** %26, align 8
  %27 = load i32**, i32*** %6, align 8
  %28 = load i32*, i32** %27, align 8
  %29 = icmp eq i32* %28, null
  br i1 %29, label %30, label %32

30:                                               ; preds = %22
  %31 = load i64, i64* @ERROR_OUTOFMEMORY, align 8
  store i64 %31, i64* %5, align 8
  br label %51

32:                                               ; preds = %22
  %33 = load i32**, i32*** %6, align 8
  %34 = load i32*, i32** %33, align 8
  %35 = load i32, i32* %7, align 4
  %36 = load i64, i64* %8, align 8
  %37 = load i32, i32* %9, align 4
  %38 = call i64 @GetExtendedUdpTable(i32* %34, i64* %11, i32 %35, i64 %36, i32 %37, i32 0)
  store i64 %38, i64* %10, align 8
  %39 = load i64, i64* %10, align 8
  %40 = load i64, i64* @NO_ERROR, align 8
  %41 = icmp ne i64 %39, %40
  br i1 %41, label %42, label %48

42:                                               ; preds = %32
  %43 = call i32 (...) @GetProcessHeap()
  %44 = load i32**, i32*** %6, align 8
  %45 = load i32*, i32** %44, align 8
  %46 = call i32 @HeapFree(i32 %43, i32 0, i32* %45)
  %47 = load i32**, i32*** %6, align 8
  store i32* null, i32** %47, align 8
  br label %48

48:                                               ; preds = %42, %32
  br label %49

49:                                               ; preds = %48, %4
  %50 = load i64, i64* %10, align 8
  store i64 %50, i64* %5, align 8
  br label %51

51:                                               ; preds = %49, %30
  %52 = load i64, i64* %5, align 8
  ret i64 %52
}

declare dso_local i64 @GetExtendedUdpTable(i32*, i64*, i32, i64, i32, i32) #1

declare dso_local i32* @HeapAlloc(i32, i32, i64) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @HeapFree(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
